Set up Sass variables, mixins, breakpoints, colors, and font-face

--- a/src/styles/partials/_globals.scss
+++ b/src/styles/partials/_globals.scss
@@ -10,7 +10,7 @@
     box-sizing: border-box;
 }
 
-// body {
-    // font-family: $typeface-primary;
-    // background-color: $primary-background-color;
-// }
+body {
+    font-family: $typeface-primary, sans-serif;
+    background-color: $primary-bg-color;
+}
