--- a/src/styles/partials/_typography.scss
+++ b/src/styles/partials/_typography.scss
@@ -1,30 +1,64 @@
-// @font-face {
-//     font-family: "Newsreader";
-//     src: url("../../assets/fonts/Newsreader-Regular.woff");
-//     font-weight: 400;
-// }
+@font-face {
+    font-family: "Lato";
+    src: url("../../assets/fonts/Lato/Lato-Thin.ttf");
+    font-weight: 100;
+}
 
-// @font-face {
-//     font-family: "Newsreader";
-//     src: url("../../assets/fonts/Newsreader-Light.woff");
-//     font-weight: 300;
-// }
+@font-face {
+    font-family: "Lato";
+    src: url("../../assets/fonts/Lato/Lato-ThinItalic.ttf");
+    font-weight: 100;
+    font-style: italic;
+}
 
-// @font-face {
-//     font-family: "Newsreader";
-//     src: url("../../assets/fonts/Newsreader-LightItalic.woff");
-//     font-weight: 300;
-//     font-style: italic;
-// }
+@font-face {
+    font-family: "Lato";
+    src: url("../../assets/fonts/Lato/Lato-Light.ttf");
+    font-weight: 300;
+}
 
-// @font-face {
-//     font-family: "Outfit";
-//     src: url("../../assets/fonts/Outfit-Light.woff");
-//     font-weight: 300;
-// }
+@font-face {
+    font-family: "Lato";
+    src: url("../../assets/fonts/Lato/Lato-LightItalic.ttf");
+    font-weight: 300;
+    font-style: italic;
+}
 
-// @font-face {
-//     font-family: "Outfit";
-//     src: url("../../assets/fonts/Outfit-Medium.woff");
-//     font-weight: 500;
-// }
+@font-face {
+    font-family: "Lato";
+    src: url("../../assets/fonts/Lato/Lato-Regular.ttf");
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: "Lato";
+    src: url("../../assets/fonts/Lato/Lato-Italic.ttf");
+    font-weight: 400;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: "Lato";
+    src: url("../../assets/fonts/Lato/Lato-Bold.ttf");
+    font-weight: 700;
+}
+
+@font-face {
+    font-family: "Lato";
+    src: url("../../assets/fonts/Lato/Lato-BoldItalic.ttf");
+    font-weight: 700;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: "Lato";
+    src: url("../../assets/fonts/Lato/Lato-Black.ttf");
+    font-weight: 900;
+}
+
+@font-face {
+    font-family: "Lato";
+    src: url("../../assets/fonts/Lato/Lato-BlackItalic.ttf");
+    font-weight: 900;
+    font-style: italic;
+}
