--- a/src/components/Choose/Choose.scss
+++ b/src/components/Choose/Choose.scss
@@ -5,12 +5,24 @@
     @include flex (row, flex-start, center);
     padding: 1rem;
     margin-bottom: 1rem;
+    gap: 1rem;
+
+    @include tablet-breakpoint {
+        padding: 1.5rem 2.5rem;
+        gap: 1.5rem;
+        margin-bottom: 2.5rem;
+    }
 
     &__box {
 
         &-width {
             padding-right: 0.7rem;
             width: 65%;
+
+            @include tablet-breakpoint {
+                width: 70%;
+                padding-right: 3rem;
+            }
         }
 
         &-title {
@@ -18,6 +30,10 @@
             color: $primary-text-color;
             font-style: italic;
             font-weight: 400;
+
+            @include tablet-breakpoint {
+                font-size: 0.8rem;
+            }
         }
 
         &-subtitle {
@@ -27,17 +43,31 @@
             font-weight: 700;
             padding-top: 0.3rem;
             padding-bottom: 1rem;
+
+            @include tablet-breakpoint {
+                font-size: 1rem;
+                padding-top: 0.5rem;
+                padding-bottom: 1.5rem;
+            }
         }
 
         &-image {
             width: 100%;
             height: 17vh;
             border-radius: .3125rem;
+
+            @include tablet-breakpoint {
+                height: 30vh;
+            }
         }
 
         &-container {
             border-left: 1px solid $secondary-text-color;
             padding: 0 1rem;
+
+            @include tablet-breakpoint {
+                padding: 2.5rem 2.5rem;
+            }
         }
 
         &-content {
@@ -46,10 +76,20 @@
             padding: 1rem 0rem;
         }
 
+        &-number {
+            @include tablet-breakpoint {
+                font-size: 1.5rem;
+            }
+        }
+
         &-text {
             font-size: 0.4rem;
             font-weight: 400;
             padding-top: 0.2rem;
+
+            @include tablet-breakpoint {
+                font-size: 0.6rem;
+            }
         }
     }
 }
