--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -4,8 +4,13 @@
 .footer {
     background-color: $secondary-text-color;
     color: $primary-bg-color;
-    padding: 3rem 1rem;
     text-align: center;
+    height: 30vh;
+    @include flex(column, center, center);
+
+    @include tablet-breakpoint {
+        height: 40vh;
+    }
 
     &__social {
         @include flex(row, center, center);
@@ -27,5 +32,9 @@
         font-size: 0.6rem;
         margin: 0;
         font-weight: 300;
+
+        @include tablet-breakpoint {
+            font-size: 0.8rem;
+        }
     }
 }
