--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -12,6 +12,10 @@
         height: 40vh;
     }
 
+    @include desktop-breakpoint {
+        height: 50vh;
+    }
+
     &__social {
         @include flex(row, center, center);
         gap: 1rem;
@@ -19,9 +23,14 @@
     }
 
     &__social-image {
-        width: 24px;
-        height: 24px;
+        width: 1.5rem;
+        height: 1.5rem;
         transition: opacity 0.3s ease;
+
+        @include desktop-breakpoint {
+            width: 2rem;
+            height: 2rem;
+        }
 
         &:hover {
             opacity: 0.8;
@@ -35,6 +44,10 @@
 
         @include tablet-breakpoint {
             font-size: 0.8rem;
+        }
+
+        @include desktop-breakpoint {
+            font-size: 1rem;
         }
     }
 }
