--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -6,20 +6,39 @@
     color: $primary-bg-color;
     text-align: center;
     height: 30vh;
-    @include flex(column, center, center);
+    @include flex(column, space-around, center);
+    // width: 100%;
+    // border: 2px solid red;
 
     @include tablet-breakpoint {
+        @include flex(column, space-around, space-around);
         height: 40vh;
+        // border: 2px solid red;
     }
 
     @include desktop-breakpoint {
         height: 50vh;
     }
 
+    // &__box {
+    //     // width: 100%;
+    //     // border: 2px solid red;
+
+    //     @include tablet-breakpoint {
+    //         // @include flex(row, flex-start, center);
+    //         // width: 100%;
+    //         // border: 2px solid red;
+    //     }
+    // }
+
     &__social {
         @include flex(row, center, center);
         gap: 1rem;
-        margin-bottom: 1rem;
+        margin-bottom: 2rem;
+
+        @include tablet-breakpoint {
+            margin-bottom: 3rem;
+        }
     }
 
     &__social-image {
@@ -37,17 +56,67 @@
         }
     }
 
+    &__contact {
+        margin-top: 1.25rem;
+        text-align: center;
+        line-height: 0.5rem;
+
+        @include tablet-breakpoint {
+            line-height: 1rem;
+        }
+
+        @include desktop-breakpoint {
+            margin-bottom: 3rem;
+            line-height: 1.5rem;
+        }
+    
+        &-text {
+            font-size: 0.6rem;
+            font-weight: 300;
+            
+            @include tablet-breakpoint {
+                font-size: 0.8rem;
+            }
+        
+            @include desktop-breakpoint {
+                font-size: 1rem;
+            }
+        }
+    
+        &-email {
+            color: rgb(45, 151, 131);
+            text-decoration: none;
+            font-weight: 700;
+            font-size: 0.7rem;
+
+            @include tablet-breakpoint {
+                font-size: 0.9rem;
+            }
+        
+            @include desktop-breakpoint {
+                font-size: 1.2rem;
+            }
+    
+            &:hover {
+                text-decoration: underline;
+            }
+        }
+    }
+
     &__text {
         font-size: 0.6rem;
-        margin: 0;
+        // margin: 0;
         font-weight: 300;
+        margin-top: 2rem;
 
         @include tablet-breakpoint {
             font-size: 0.8rem;
+            margin-top: 3rem;
         }
 
         @include desktop-breakpoint {
             font-size: 1rem;
+            margin-top: 4rem;
         }
     }
 }
