mobile responsiveness of users page

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -14,7 +14,8 @@
     }
 
     &--notHome {
-        background-color: $alternate-bg-color;
+        // background-color: $alternate-bg-color;
+        background-color: $primary-bgg-color;
         color: $primary-bg-color;
     }
 
