--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -4,6 +4,7 @@ $typeface-primary: "Lato";
 
 $secondary-bg-color: rgb(0 134 111); // Green
 $primary-text-color: rgb(45 151 131); // Green
+$primary-bgg-color: rgb(233, 248, 245); // Green
 $secondary-text-color: rgb(32 30 31); // Black
 $primary-bg-color: rgb(255 255 255); // White
 $alternate-bg-color: rgb(240 240 240); // Grey
