--- a/src/pages/Users/Users.scss
+++ b/src/pages/Users/Users.scss
@@ -9,12 +9,30 @@
 
     &__header {
         @include flex(row, space-between, center);
-        margin-left: 1rem;
-        margin-right: 1rem;
+        // padding-left: 1rem;
+        // padding-right: 1rem;
+        // padding-bottom: 2rem;
+        // border: 2px solid red;
+        padding: 0 1rem;
+        height: 10vh;
+
+        @include tablet-breakpoint {
+            // padding-left: 2.5rem;
+            // padding-right: 2.5rem;
+            // padding-bottom: 4rem;
+            // border: 2px solid red;
+            padding: 0 2.5rem;
+            height: 15vh;
+            @include flex(row, flex-start, center);
+        }
 
         &-header {
             font-size: 1.7rem;
             font-style: italic;
+
+            @include tablet-breakpoint {
+                font-size: 2rem;
+            }
         }
 
         &-button {
@@ -30,53 +48,95 @@
 
     &__active {
         margin-top: 1.5rem;
-        // background-color: $alternate-bg-color;
         padding: 1.5rem 1rem;
+        height: 38vh;
         background-color: $secondary-bg-color;
 
+        @include tablet-breakpoint {
+            padding-left: 2.5rem;
+            padding-right: 2.5rem;
+            height: 45vh;
+        }
+
         &-title {
-            // border: 2px solid red;
             @include flex(row, flex-start, center);
             width: 100%;
             font-size: 1.25rem;
             color: $primary-bg-color;
             font-weight: 700;
             padding-bottom: 1rem;
+
+            @include tablet-breakpoint {
+                font-size: 1.5rem;
+            }
+        }
+
+        &-head {
+            display: none;
+
+            @include tablet-breakpoint {
+                @include flex(row, flex-start, center);
+                // border: 2px solid red;
+                font-style: italic;
+                font-size: 1rem;
+                gap: 3rem;
+                color: $primary-bg-color;
+                margin-bottom: 0.5rem;
+                margin-top: 3rem;
+                // width: 15%;
+            }
+        }
+
+        &-headd {
+            @include tablet-breakpoint {
+                width: 20%;
+            }
         }
 
         &-container {
             @include flex(column, center, center);
             gap: 1rem;
             color: $primary-bg-color;
+
+            @include tablet-breakpoint {
+                @include flex(row, center, center);
+                gap: 3rem;
+            }
         }
 
         &-box {
             @include flex(column, center, center);
+
+            @include tablet-breakpoint {
+                @include flex(column, center, flex-start);
+                width: 100%;
+            }
         }
 
         &-header {
             font-style: italic;
             font-size: 1rem;
             font-size: .6rem;
+
+            @include tablet-breakpoint {
+                display: none;
+            }
         }
 
         &-text {
             font-size: 1rem;
             padding-top: 0.2rem;
             font-weight: 700;
-        }
 
-        &-head {
-            display: none;
+            @include tablet-breakpoint {
+                font-size: 1.35rem;
+                // border: 2px solid red;
+            }
         }
     }
 
     &__history {
-        // margin-top: 1.5rem;
-        // background-color: $alternate-bg-color;
-        // background-color: $primary-bgg-color;
         padding: 1.5rem 0 1.5rem 0;
-
 
         &-title {
             @extend .users__active-title;
@@ -85,36 +145,70 @@
             padding-top: 1.5rem;
             padding-left: 1rem;
             padding-right: 1rem;
+
+            @include tablet-breakpoint {
+                padding-left: 2.5rem;
+                padding-right: 2.5rem;
+                border-bottom: 0;
+            }
+        }
+
+        &-head {
+            display: none;
+
+            @include tablet-breakpoint {
+                @include flex(row, flex-start, center);
+                padding: 2.5rem 2.5rem 1.5rem 2.5rem;
+                border-bottom: 1px solid $secondary-bg-color;
+                font-style: italic;
+            }
+
+            &-text {
+                width: 20%;
+            }
         }
 
         &-container {
             @include flex(column, center, center);
             gap: 1rem;
-            // border-bottom: 20px solid $primary-bg-color;
             border-bottom: 1px solid $secondary-bg-color;
             padding: 1rem;
-            // background-color: $primary-bgg-color;
-            // gap: 0.5rem;
+
+            @include tablet-breakpoint {
+                @include flex(row, flex-start, center);
+                padding: 2rem 2.5rem;
+                gap: 0;
+            }
         }
 
         &-box {
             @include flex(column, center, center);
+
+            @include tablet-breakpoint {
+                width: 20%;
+                @include flex(row, flex-start, center);
+                gap: 0;
+            }
         }
 
         &-header {
             font-style: italic;
             font-size: 1rem;
             font-size: .6rem;
+
+            @include tablet-breakpoint {
+                display: none;
+            }
         }
 
         &-text {
             font-size: 1rem;
             padding-top: 0.2rem;
             font-weight: 700;
-        }
 
-        &-head {
-            display: none;
+            @include tablet-breakpoint {
+                font-size: 1.2rem;
+            }
         }
     }
 }
