Implemented desktop responsiveness on users page

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -12,6 +12,7 @@
 
     @include desktop-breakpoint {
         padding: 1.5rem 3rem;
+        // background-color: purple;
     }
 
     &--notHome {
