--- a/src/pages/Users/Users.scss
+++ b/src/pages/Users/Users.scss
@@ -9,21 +9,17 @@
 
     &__header {
         @include flex(row, space-between, center);
-        // padding-left: 1rem;
-        // padding-right: 1rem;
-        // padding-bottom: 2rem;
-        // border: 2px solid red;
         padding: 0 1rem;
         height: 10vh;
 
         @include tablet-breakpoint {
-            // padding-left: 2.5rem;
-            // padding-right: 2.5rem;
-            // padding-bottom: 4rem;
-            // border: 2px solid red;
             padding: 0 2.5rem;
             height: 15vh;
-            @include flex(row, flex-start, center);
+            @include flex(row, space-between, center);
+        }
+
+        @include desktop-breakpoint {
+            padding: 0 4rem;
         }
 
         &-header {
@@ -33,16 +29,23 @@
             @include tablet-breakpoint {
                 font-size: 2rem;
             }
+
+            @include desktop-breakpoint {
+                font-size: 2.5rem;
+            }
         }
 
         &-button {
             background-color: $secondary-bg-color;
-            // background-color: $primary-bgg-color;
             border: none;
             padding: 0.7rem 1.2rem;
             border-radius: .375rem;
             color: $primary-bg-color;
             font-weight: 700;
+
+            @include desktop-breakpoint {
+                padding: 1rem 1.5rem;
+            }
         }
     }
 
@@ -58,6 +61,10 @@
             height: 45vh;
         }
 
+        @include desktop-breakpoint {
+            padding: 3rem 4rem;
+        }
+
         &-title {
             @include flex(row, flex-start, center);
             width: 100%;
@@ -69,6 +76,10 @@
             @include tablet-breakpoint {
                 font-size: 1.5rem;
             }
+
+            @include desktop-breakpoint {
+                font-size: 2rem;
+            }
         }
 
         &-head {
@@ -76,20 +87,24 @@
 
             @include tablet-breakpoint {
                 @include flex(row, flex-start, center);
-                // border: 2px solid red;
                 font-style: italic;
                 font-size: 1rem;
                 gap: 3rem;
                 color: $primary-bg-color;
                 margin-bottom: 0.5rem;
                 margin-top: 3rem;
-                // width: 15%;
+            }
+
+            @include desktop-breakpoint {
+                margin-top: 4rem;
+                gap: 0;
+                width: 100%;
             }
         }
 
         &-headd {
             @include tablet-breakpoint {
-                width: 20%;
+                width: 25%;
             }
         }
 
@@ -101,6 +116,11 @@
             @include tablet-breakpoint {
                 @include flex(row, center, center);
                 gap: 3rem;
+            }
+
+            @include desktop-breakpoint {
+                gap: 0;
+                width: 100%;
             }
         }
 
@@ -130,7 +150,10 @@
 
             @include tablet-breakpoint {
                 font-size: 1.35rem;
-                // border: 2px solid red;
+            }
+
+            @include desktop-breakpoint {
+                font-size: 2rem;
             }
         }
     }
@@ -151,6 +174,11 @@
                 padding-right: 2.5rem;
                 border-bottom: 0;
             }
+
+            @include desktop-breakpoint {
+                padding-left: 4rem;
+                padding-right: 4rem;
+            }
         }
 
         &-head {
@@ -161,6 +189,10 @@
                 padding: 2.5rem 2.5rem 1.5rem 2.5rem;
                 border-bottom: 1px solid $secondary-bg-color;
                 font-style: italic;
+            }
+
+            @include desktop-breakpoint {
+                padding: 2rem 4rem;
             }
 
             &-text {
@@ -178,6 +210,10 @@
                 @include flex(row, flex-start, center);
                 padding: 2rem 2.5rem;
                 gap: 0;
+            }
+
+            @include desktop-breakpoint {
+                padding: 2rem 4rem;
             }
         }
 
