--- a/src/pages/Admin/Admin.scss
+++ b/src/pages/Admin/Admin.scss
@@ -9,14 +9,10 @@
 
     &__title {
         @include flex(row, flex-start, center);
-        // width: 100%;
         font-size: 1.7rem;
-        // font-size: 1.25rem;
-        // color: $primary-bg-color;
         font-weight: 700;
         padding-bottom: 1rem;
         color: $secondary-text-color;
-        // border-bottom: 1px solid $secondary-bg-color;
         padding-top: 1.5rem;
         padding-left: 1rem;
         padding-right: 1rem;
@@ -38,32 +34,23 @@
 
         &-up {
             @include flex(row, flex-end, center);
-            // @include flex(row, space-between, center);
             margin: 1.5rem 1rem 1rem 1rem;
-            // height: 10vh;
-            // border-bottom: 1px solid $secondary-bg-color;
 
             @include tablet-breakpoint {
                 margin: 1.5rem 2.5rem 1rem 2.5rem;
-                // padding: 0 2.5rem;
-                // height: 15vh;
-                // @include flex(row, space-between, center);
             }
     
-            // @include desktop-breakpoint {
-            //     padding: 0 4rem;
-            // }
+            @include desktop-breakpoint {
+                margin: 1.5rem 4rem 1rem 4rem;
+            }
     
             &-search {
                 border: 2px solid $secondary-bg-color;
-                // border: none;
                 padding: 0.5rem 1.25rem;
                 border-radius: 1.25rem;
                 color: $primary-bg-color;
-                // font-weight: 700;
                 font-family: $typeface-primary, sans-serif;
                 width: 40%;
-                // vertical-align: right;
 
                 @include tablet-breakpoint {
                     padding: 0.7rem 1rem;
@@ -71,7 +58,9 @@
                 }
 
                 @include desktop-breakpoint {
-                    padding: 1.5rem 1.5rem;
+                    padding: 0.9rem 1rem;
+                    width: 20%;
+                    margin-bottom: 2rem;
                 }
             }
         }
@@ -110,7 +99,6 @@
         }
 
         &-text {
-            // border: 2px solid red;
             flex: 1;
             text-align: start;
 
