Created mobile responsiveness for register page

--- a/src/styles/partials/_globals.scss
+++ b/src/styles/partials/_globals.scss
@@ -13,4 +13,5 @@
 body {
     font-family: $typeface-primary, sans-serif;
     background-color: $primary-bg-color;
+    transition: all 2s ease-in-out;
 }
