--- a/src/pages/RegisterPage/RegisterPage.scss
+++ b/src/pages/RegisterPage/RegisterPage.scss
@@ -11,6 +11,11 @@
         box-shadow: 0.5rem 0.5rem 1rem rgba($secondary-bg-color, 0.5);
     }
 
+    @include desktop-breakpoint {
+        margin: 5rem 30rem 15rem;
+        padding: 2rem 0 3rem 0;
+    }
+
     &__header {
         @include flex(column, center, center);
 
@@ -22,6 +27,8 @@
             @include tablet-breakpoint {
                 font-size: 2.2rem;
             }
+
+            
         }
 
         &-subtitle {
