--- a/src/components/ForgotPassword/ForgotPassword.scss
+++ b/src/components/ForgotPassword/ForgotPassword.scss
@@ -1,18 +1,18 @@
 @use "../../styles/partials/mixins" as *;
 @use "../../styles/partials/variables" as *;
 
-.register {
-    margin: 1rem;
+.forgot-password {
+    margin: 2rem 0 9rem;
     padding: 1rem 0;
 
     @include tablet-breakpoint {
-        margin: 3rem 10rem 5rem;
+        margin: 4rem 12rem 7rem;
         border-radius: .125rem;
         box-shadow: 0.5rem 0.5rem 1rem rgba($secondary-bg-color, 0.5);
     }
 
     @include desktop-breakpoint {
-        margin: 5rem 30rem 15rem;
+        margin: 7rem 32rem 15rem;
         padding: 2rem 0 3rem 0;
     }
 
@@ -27,8 +27,6 @@
             @include tablet-breakpoint {
                 font-size: 2.2rem;
             }
-
-
         }
 
         &-subtitle {
@@ -37,13 +35,6 @@
             @include tablet-breakpoint {
                 font-size: 1.2rem;
             }
-        }
-
-        &-link {
-            font-style: normal;
-            padding-left: 0.5rem;
-            text-decoration: none;
-            color: $secondary-bg-color;
         }
     }
 
@@ -82,6 +73,21 @@
             color: $primary-bg-color;
             font-weight: 700;
             font-size: 1.05rem;
+        }
+    }
+
+    &__footer {
+        text-align: center;
+        margin-top: 1.5rem;
+        font-size: 0.9rem;
+
+        a {
+            color: $secondary-bg-color;
+            text-decoration: none;
+
+            &:hover {
+                text-decoration: underline;
+            }
         }
     }
 }
