Created components out of Admin and Users Page and renamed folders

--- a/src/components/Admin/Admin.scss
+++ b/src/components/Admin/Admin.scss
@@ -86,6 +86,7 @@
                 width: 16.5%;
                 display: flex;
                 font-weight: 700;
+                color: $primary-bg-color;
 
                 // S/N column takes less space
                 &:first-child {
