Created admin history component to be reused

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,7 +3,6 @@
 
 .header {
     background-color: $primary-bg-color;
-    // border-bottom: 1px solid $primary-text-color;
 
     @include tablet-breakpoint {
         @include flex(row, space-between, center);
@@ -12,13 +11,11 @@
 
     @include desktop-breakpoint {
         padding: 1.5rem 3rem;
-        // background-color: purple;
     }
 
     &--notHome {
-        // background-color: $alternate-bg-color;
         background-color: $primary-bgg-color;
-        color: $primary-bg-color;
+        color: $secondary-text-color;
     }
 
     &__container {
