--- a/src/components/AdminHistory/AdminHistory.scss
+++ b/src/components/AdminHistory/AdminHistory.scss
@@ -66,7 +66,7 @@
                         flex: 0.5;
                     }
     
-                    &:nth-child(5) {
+                    &:nth-child(2) {
                         flex: 1.5;
                     }
                 }
@@ -75,7 +75,14 @@
             &-text {
                 flex: 1;
                 text-align: start;
-    
+
+                &--name{
+                    color: $secondary-bg-color;
+
+                    &:hover {
+                        font-weight: 400;
+                    }
+                }
             }
     
             &-container {
@@ -108,7 +115,7 @@
                         flex: 0.5;
                     }
     
-                    &:nth-child(5) {
+                    &:nth-child(2) {
                         flex: 1.5;
                     }
                 }
