--- a/src/styles/partials/_globals.scss
+++ b/src/styles/partials/_globals.scss
@@ -15,3 +15,15 @@ body {
     background-color: $primary-bg-color;
     transition: all 2s ease-in-out;
 }
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+a:visited,
+a:active,
+a:hover {
+    text-decoration: none;
+    color: inherit;
+}
