--- a/src/components/UsersDetails/UsersDetails.scss
+++ b/src/components/UsersDetails/UsersDetails.scss
@@ -6,11 +6,11 @@
     padding: 1rem 0;
 
     @include tablet-breakpoint {
-        margin: 3rem 2.5rem 5rem;
+        margin: 1.5rem 2.5rem 5rem;
+        padding: 0;
     }
 
     @include desktop-breakpoint {
-        // margin: 5rem 30rem 15rem;
         padding: 2rem 0 3rem 0;
     }
 
@@ -26,6 +26,10 @@
             @include tablet-breakpoint {
                 font-size: 2.2rem;
             }
+
+            @include desktop-breakpoint {
+                font-size: 2.5rem;
+            }
         }
 
         &-link {
@@ -33,6 +37,10 @@
             color: $secondary-bg-color;
             text-decoration: none;
             margin-top: 1rem;
+
+            @include desktop-breakpoint {
+                margin-top: 0.5rem;
+            }
 
             &:hover,
             &:visited {
@@ -43,34 +51,61 @@
     }
 
     &__info {
-        // margin: 2rem;
+        @include tablet-breakpoint {
+            @include flex(row, center, center);
+            gap: 7rem;
+            margin-top: 3rem;
+            margin-bottom: 1rem;
+        }
+
+        @include desktop-breakpoint {
+            gap: 10rem;
+        }
 
         &-group {
             margin-bottom: 1.5rem;
+
+            @include tablet-breakpoint {
+                @include flex(column, center, center);
+            }
         }
 
         &-label {
             font-size: 0.9rem;
             font-weight: 600;
-            // color: $secondary-text-color;
             margin-bottom: 0.5rem;
+
+            @include desktop-breakpoint {
+                font-size: 1.2rem;
+            }
         }
 
         &-text {
             font-size: 1rem;
             font-weight: 400;
-            // color: $text-primary;
+
+            @include tablet-breakpoint {
+                font-size: 1.2rem;
+                font-weight: 300;
+            }
         }
     }
 
     &__loan-history {
-        // margin: 2rem;
 
         &-title {
             font-size: 1.5rem;
             color: $secondary-bg-color;
             font-weight: 700;
-            margin-bottom: 1.5rem;
+            margin-top: 2.5rem;
+
+            @include tablet-breakpoint {
+                margin-bottom: 0rem;
+            }
+
+            @include desktop-breakpoint {
+                font-size: 1.8rem;
+            }
         }
 
         &-item {
@@ -93,7 +128,14 @@
             font-size: 0.9rem;
             font-weight: 700;
             width: 25%;
-            // color: $secondary-text-color;
+
+            @include tablet-breakpoint {
+                width: 10%
+            }
+
+            @include desktop-breakpoint {
+                font-size: 1.2rem;
+            }
         }
 
         &-text {
@@ -101,7 +143,10 @@
             font-weight: 300;
             padding-top: 0.2rem;
             width: 75%;
-            // color: $text-primary;
+
+            @include tablet-breakpoint {
+                width: 90%
+            }
         }
     }
 }
