Create loan form and its responsiveness

--- a/src/components/ForgotPassword/ForgotPassword.scss
+++ b/src/components/ForgotPassword/ForgotPassword.scss
@@ -73,6 +73,10 @@
             color: $primary-bg-color;
             font-weight: 700;
             font-size: 1.05rem;
+
+            &:hover {
+                background-color: $hover-button-color;
+            }
         }
     }
 
