--- a/src/components/ResetPassword/ResetPassword.scss
+++ b/src/components/ResetPassword/ResetPassword.scss
@@ -73,6 +73,11 @@
             color: $primary-bg-color;
             font-weight: 700;
             font-size: 1.05rem;
+            cursor: pointer;
+
+            &:hover {
+                background-color: $hover-button-color;
+            }
         }
     }
 }
