--- a/src/components/Users/Users.scss
+++ b/src/components/Users/Users.scss
@@ -10,7 +10,7 @@
     &__header {
         @include flex(row, space-between, center);
         padding: 0 1rem;
-        height: 10vh;
+        height: 15vh;
 
         @include tablet-breakpoint {
             padding: 0 2.5rem;
@@ -35,16 +35,41 @@
             }
         }
 
+        &-links {
+            @include flex(column, center, center);
+            gap: 0.6rem;
+
+            @include tablet-breakpoint {
+                @include flex(row, center, center);
+                gap: 2rem;
+            }
+
+            @include desktop-breakpoint {
+                @include flex(row, center, center);
+                gap: 4rem;
+            }
+        }
+
         &-button {
             background-color: $secondary-bg-color;
             border: none;
-            padding: 0.7rem 1.2rem;
+            padding: 0.7rem 0;
+            width: 120px;
             border-radius: .375rem;
             color: $primary-bg-color;
             font-weight: 700;
+            cursor: pointer;
 
             @include desktop-breakpoint {
+                width: 180px;
                 padding: 1rem 1.5rem;
+                padding: 1.2rem 0;
+                font-size: 1rem;
+                border-radius: .5rem;
+            }
+
+            &:hover {
+                background-color: $hover-button-color;
             }
         }
     }
