--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -8,6 +8,7 @@ $primary-bgg-color: rgb(233, 248, 245); // Green
 $secondary-text-color: rgb(32 30 31); // Black
 $primary-bg-color: rgb(255 255 255); // White
 $alternate-bg-color: rgb(240 240 240); // Grey
+$hover-button-color: rgb(0, 83, 68.7537313433); // Darken Green
 
 $tablet-breakpoint: 48rem;
 $desktop-breakpoint: 80rem;
