--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -114,7 +114,7 @@
         }
 
         &:hover {
-        color: $alternate-bg-color;
+            background-color: $hover-button-color;
         }
     }
 
