--- a/src/components/Register/Register.scss
+++ b/src/components/Register/Register.scss
@@ -82,6 +82,11 @@
             color: $primary-bg-color;
             font-weight: 700;
             font-size: 1.05rem;
+            cursor: pointer;
+
+            &:hover {
+                background-color: $hover-button-color;
+            }
         }
     }
 }
