--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -9,6 +9,7 @@ $secondary-text-color: rgb(32 30 31); // Black
 $primary-bg-color: rgb(255 255 255); // White
 $alternate-bg-color: rgb(240 240 240); // Grey
 $hover-button-color: rgb(0, 83, 68.7537313433); // Darken Green
+$error-red: rgb(183, 0, 0);
 
 $tablet-breakpoint: 48rem;
 $desktop-breakpoint: 80rem;
