Adjusted success message color

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -10,6 +10,7 @@ $primary-bg-color: rgb(255 255 255); // White
 $alternate-bg-color: rgb(240 240 240); // Grey
 $hover-button-color: rgb(0, 83, 68.7537313433); // Darken Green
 $error-red: rgb(183, 0, 0);
+$success-color: rgb(2, 169, 2);
 
 $tablet-breakpoint: 48rem;
 $desktop-breakpoint: 80rem;
