--- a/src/components/SuccessMessage/SuccessMessage.scss
+++ b/src/components/SuccessMessage/SuccessMessage.scss
@@ -4,7 +4,7 @@
 .success {
     display: block;
     @include flex(row, center, center);
-    color: rgb(213, 251, 213);
+    color: $success-color;
     padding: 0.5rem 0.8rem;
     font-size: 1rem;
     margin-top: 0.25rem;
