--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -80,6 +80,10 @@
     &__link-container {
         font-size: 1.25rem;
         transition: all 2s ease-out;
+
+        &--display {
+            display: none;
+        }
     }
 
     &__link {
