--- a/src/components/Users/Users.scss
+++ b/src/components/Users/Users.scss
@@ -181,6 +181,49 @@
                 font-size: 2rem;
             }
         }
+
+        &-no-loan {
+            @include flex(column, center, center);
+            height: 100%;
+            gap: 1rem;
+
+            &-text {
+                font-size: 1.25rem;
+                color: $primary-bg-color;
+                text-align: center;
+
+                @include tablet-breakpoint {
+                    font-size: 1.5rem;
+                }
+
+                @include desktop-breakpoint {
+                    font-size: 2rem;
+                }
+            }
+
+            &-button {
+                padding: 0.75rem 1.5rem;
+                background-color: $primary-bg-color;
+                color: $secondary-bg-color;
+                border: none;
+                border-radius: 0.5rem;
+                font-size: 1rem;
+                cursor: pointer;
+                transition: background-color 0.3s ease;
+
+                &:hover {
+                    background-color: darken($primary-bg-color, 10%);
+                }
+
+                @include tablet-breakpoint {
+                    font-size: 1.25rem;
+                }
+
+                @include desktop-breakpoint {
+                    font-size: 1.5rem;
+                }
+            }
+        }
     }
 
     &__history {
