Implemented log out

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -112,5 +112,9 @@
             display: block;
             box-sizing: border-box;
         }
+
+        &--display {
+            display: none;
+        }
     }
 }
