Added search functionality to admin's page

--- a/src/components/AdminHistory/AdminHistory.scss
+++ b/src/components/AdminHistory/AdminHistory.scss
@@ -21,7 +21,7 @@
                     border: 2px solid $secondary-bg-color;
                     padding: 0.5rem 1.25rem;
                     border-radius: 1.25rem;
-                    color: $primary-bg-color;
+                    color: $secondary-text-color;
                     font-family: $typeface-primary, sans-serif;
                     width: 40%;
     
