--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -73,7 +73,7 @@
             position: absolute;
             right: 0;
             z-index: 1000;
-            border-top: 1px solid $primary-text-color;
+            border: 1px solid $primary-text-color;
 
             @include tablet-breakpoint {
                 display: none;
