--- a/src/components/AdminHistory/AdminHistory.scss
+++ b/src/components/AdminHistory/AdminHistory.scss
@@ -18,22 +18,27 @@
                 }
     
                 &-search {
+                    margin: null auto;
                     border: 2px solid $secondary-bg-color;
                     padding: 0.5rem 1.25rem;
                     border-radius: 1.25rem;
                     color: $secondary-text-color;
                     font-family: $typeface-primary, sans-serif;
-                    width: 40%;
+                    width: 80%;
     
                     @include tablet-breakpoint {
                         padding: 0.7rem 1rem;
-                        font-size: 1.2rem;
+                        font-size: 1rem;
+                        width: 40%;
+                        margin: null 0;
+                        border-radius: 2rem;
                     }
     
                     @include desktop-breakpoint {
                         padding: 0.9rem 1rem;
-                        width: 20%;
+                        width: 30%;
                         margin-bottom: 2rem;
+                        border-radius: 2.5rem;
                     }
                 }
             }
