--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -81,15 +81,6 @@
         }
     }
 
-    &__link-container {
-        font-size: 1.25rem;
-        transition: all 2s ease-out;
-
-        &--display {
-            display: none;
-        }
-    }
-
     &__link {
         text-decoration: none;
         cursor: pointer;
@@ -113,8 +104,8 @@
             box-sizing: border-box;
         }
 
-        &--display {
-            display: none;
-        }
+        // &--display {
+        //     display: none;
+        // }
     }
 }
