--- a/src/components/AdminHistory/AdminHistory.scss
+++ b/src/components/AdminHistory/AdminHistory.scss
@@ -47,7 +47,8 @@
                 display: none;
     
                 @include tablet-breakpoint {
-                    background-color: $secondary-bg-color;
+                    border: 2px solid $secondary-bg-color;
+                    // background-color: $secondary-bg-color;
                     @include flex(row, flex-start, center);
                     padding: 1.5rem 2.5rem 1.5rem 2.5rem;
                     border-bottom: 1px solid $secondary-bg-color;
@@ -130,6 +131,7 @@
                 font-style: italic;
                 font-size: 1rem;
                 font-size: .6rem;
+                color: $primary-text-color;
     
                 @include tablet-breakpoint {
                     display: none;
