--- a/src/components/AdminPendingLoans/AdminPendingLoans.scss
+++ b/src/components/AdminPendingLoans/AdminPendingLoans.scss
@@ -4,17 +4,18 @@
 .admin-pend {
     margin-top: 1.5rem;
     padding: 1.5rem 1rem;
-    height: 38vh;
+    // height: 38vh;
     background-color: $secondary-bg-color;
 
     @include tablet-breakpoint {
         padding-left: 2.5rem;
         padding-right: 2.5rem;
-        height: 45vh;
+        padding-bottom: 5rem;
+        // height: 45vh;
     }
 
     @include desktop-breakpoint {
-        padding: 3rem 4rem;
+        padding: 3rem 4rem 5rem 4rem;
     }
 
     &-title {
@@ -41,7 +42,7 @@
             @include flex(row, flex-start, center);
             font-style: italic;
             font-size: 1rem;
-            gap: 3rem;
+            // gap: 3rem;
             color: $primary-bg-color;
             margin-bottom: 0.5rem;
             margin-top: 3rem;
@@ -55,8 +56,17 @@
     }
 
     &-headd {
+        // S/N column takes less space
+        &:first-child {
+            flex: 0.5;
+        }
+    
+        &:nth-child(2) {
+            flex: 1.5;
+        }
+
         @include tablet-breakpoint {
-            width: 25%;
+            width: 20%;
         }
     }
 
@@ -67,7 +77,7 @@
 
         @include tablet-breakpoint {
             @include flex(row, center, center);
-            gap: 3rem;
+            // gap: 3rem;
         }
 
         @include desktop-breakpoint {
@@ -78,6 +88,15 @@
 
     &-box {
         @include flex(column, center, center);
+
+        // S/N column takes less space
+        &:first-child {
+            flex: 0.5;
+        }
+    
+        &:nth-child(1) {
+            flex: 1.5;
+        }
 
         @include tablet-breakpoint {
             @include flex(column, center, flex-start);
@@ -106,6 +125,15 @@
 
         @include desktop-breakpoint {
             font-size: 2rem;
+        }
+
+        // S/N column takes less space
+        &:first-child {
+            flex: 0.5;
+        }
+
+        &:nth-child(2) {
+            flex: 1.5;
         }
     }
 
