--- a/src/components/AdminPendingLoans/AdminPendingLoans.scss
+++ b/src/components/AdminPendingLoans/AdminPendingLoans.scss
@@ -155,6 +155,14 @@
         // &:nth-child(2) {
         //     flex: 1.5;
         // }
+
+        &--name {
+            font-weight: 300;
+
+            &:hover {
+                font-weight: 700;
+            }
+        }
     }
 
     &-no-loan {
