--- a/src/components/AdminHistory/AdminHistory.scss
+++ b/src/components/AdminHistory/AdminHistory.scss
@@ -109,6 +109,7 @@
             }
     
             &-box {
+                // position: relative;
                 @include flex(column, center, center);
     
                 @include tablet-breakpoint {
@@ -146,6 +147,69 @@
                 @include tablet-breakpoint {
                     font-size: 1.2rem;
                     font-weight: 300;
+                }
+            }
+
+            &-box-input {
+                // position: relative;
+                // display: block;
+                cursor: pointer;
+                border: 1px solid $primary-bg-color;
+                border-radius: .375rem;
+                padding: .625rem 0;
+                background-color: lighten($secondary-bg-color, 5%);
+                font-size: 1rem;
+                color: $primary-bg-color;
+                width: 100%;
+                text-align: center;
+                transition: background-color 0.3s ease, border-color 0.3s ease;
+                // border: 2px solid red;
+
+                @include tablet-breakpoint {
+                    position: relative;
+                }
+            
+                &:hover {
+                    background-color: lighten($secondary-bg-color, 10%);
+                    border-color: darken($primary-bg-color, 10%);
+                }
+            
+                &:focus {
+                    outline: none;
+                    border-color: $primary-bg-color;
+                    box-shadow: 0 0 5px rgba($primary-bg-color, 0.5);
+                }
+            }
+
+            &-dropdown {
+                @include flex(column, center, center);
+                // position: absolute;
+                background-color: $secondary-bg-color;
+                border: 1px solid $primary-bg-color;
+                border-radius: .5rem;
+                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+                // z-index: 10;
+                // top: 1rem;
+                width: 60%;
+                // margin-bottom: .3125rem;
+
+                @include tablet-breakpoint {
+                    border: 2px solid red;
+                    display: block;
+                    position: absolute;
+                    // @include flex(row, center, center)
+                }
+
+                &-option {
+                    padding: 8px 12px;
+                    cursor: pointer;
+                    font-size: 1rem;
+                    color: $primary-bg-color;
+                    transition: background-color 0.3s ease;
+
+                    &:hover {
+                        background-color: lighten($secondary-bg-color, 10%);
+                    }
                 }
             }
         }
