--- a/src/components/AdminPendingLoans/AdminPendingLoans.scss
+++ b/src/components/AdminPendingLoans/AdminPendingLoans.scss
@@ -206,35 +206,79 @@
                 font-size: 1.5rem;
             }
         }
+    }
 
-        // &-dropdown {
-        //     position: absolute;
-        //     background-color: $secondary-bg-color;
-        //     border: 1px solid $primary-bg-color;
-        //     border-radius: 4px;
-        //     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        //     z-index: 10;
-        //     margin-top: 5px;
+    &-box-input {
+        align-self: center;
+        position: relative;
+        @include flex(row, center, center);
+        padding: 0.625rem 0rem 0.625rem 2.5rem;
+        border: none;
+        color: $secondary-bg-color;
+        font-size: 1rem;
+        border-radius: .5rem;
+        font-weight: 700;
+        width: 150px;
+        margin-top: 0.2rem;
+        margin-bottom: 0;
+    }
 
-        //     &-option {
-        //         padding: 8px 12px;
-        //         cursor: pointer;
-        //         font-size: 1rem;
-        //         color: $primary-bg-color;
-        //         transition: background-color 0.3s ease;
+    &-dropdown {
+        // position: absolute;
+        // background-color: $secondary-bg-color;
+        border: 1px solid $primary-bg-color;
+        border-radius: 4px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        z-index: 10;
+        width: 150px;
+        // width: 50%;
+        @include flex(column, center, center);
 
-        //         &:hover {
-        //             background-color: lighten($secondary-bg-color, 10%);
-        //         }
 
-        //         @include tablet-breakpoint {
-        //             font-size: 1.35rem;
-        //         }
+        @include tablet-breakpoint {
+            position: absolute;
+            // width: 20%;
+            bottom: 3rem;
+            z-index: 10;
+            right: 40px;
+        }
 
-        //         @include desktop-breakpoint {
-        //             font-size: 1.5rem;
-        //         }
-        //     }
-        // }
+        @include desktop-breakpoint {
+            right: 120px;
+            bottom: 1rem;
+        }
+
+        &:hover {
+            background-color: $secondary-bg-color;
+            color: $primary-bg-color;
+            width: 100%;
+        }
+
+        &-option {
+            padding: 8px 12px;
+            cursor: pointer;
+            font-size: 1rem;
+            width: 100%;
+            @include flex(row, center, center);
+            font-weight: 700;
+            // color: $primary-bg-color;
+            color: $secondary-bg-color;
+            background-color: $primary-bg-color;
+            // transition: background-color 0.3s ease;
+
+            &:hover {
+                background-color: $secondary-bg-color;
+                color: $primary-bg-color;
+                width: 100%;
+            }
+
+            @include tablet-breakpoint {
+                font-size: 1.35rem;
+            }
+
+            @include desktop-breakpoint {
+                font-size: 1.5rem;
+            }
+        }
     }
 }
